--- a/aulaweb1.html
+++ b/aulaweb1.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html><!-- novidade, pergunte -->
+<!DOCTYPE html><!-- novidade, pergunte! Isto é um comentário ;) -->
 <html>
 <head>
 </head>
 <body>
     <h1>O que é mais importante para os alunos do Ensino Médio?</h1>
-    <ul>
-        <li>Tópico 1</li>
-        <li>Tópico 2</li>
-    </ul>
+    <ul><!-- abre a lista -->
+        <li>Tópico 1</li><!-- item da lista -->
+        <li>Tópico 2</li><!-- item da lista -->
+    </ul><!-- fecha a lista -->
 </body>
 </html>
