--- a/aulaweb1.html
+++ b/aulaweb1.html
@@ -8,5 +8,6 @@
         <li>Tópico 1</li><!-- item da lista -->
         <li>Tópico 2</li><!-- item da lista -->
     </ul><!-- fecha a lista -->
+    <img src="estudantes2.jpg" alt="Foto 2 Estudantes" />
 </body>
 </html>
