--- a/pagina2.html
+++ b/pagina2.html
@@ -9,5 +9,6 @@
         <li>Tópico 2</li><!-- item da lista -->
     </ul><!-- fecha a lista -->
     <p>inserir a imagem da Marielle Franco (já está na pasta)</p>
+    <img src="marielle_franco.jpg" alt="Marielle Franco" />
 </body>
 </html>
