Update pagina1.html instruções nos comentários para inserir imagem

--- a/pagina1.html
+++ b/pagina1.html
@@ -8,6 +8,8 @@
         <li>Tópico 1</li><!-- item da lista -->
         <li>Tópico 2</li><!-- item da lista -->
     </ul><!-- fecha a lista -->
-    <img src="estudantes2.jpg" alt="Foto 2 Estudantes" />
+    <!-- quando está nesta tag é um comentário, ok? -->
+    <!-- veja na linha debaixo como é a tag para inserir uma imagem com texto alternativo -->
+    <!-- img src="estudantes2.jpg" alt="Foto 2 Estudantes" / -->
 </body>
 </html>
