Update pagina2.html instruções para mudar o título, lista e inserir imagem

--- a/pagina2.html
+++ b/pagina2.html
@@ -3,11 +3,11 @@
 <head>
 </head>
 <body>
-    <h1>Uma pessoa Importante: Marielle Franco</h1>
+    <h1>Substituir este título pelo nome dela e na lista colocar duas qualidades</h1>
     <ul><!-- abre a lista -->
         <li>Tópico 1</li><!-- item da lista -->
         <li>Tópico 2</li><!-- item da lista -->
     </ul><!-- fecha a lista -->
-    <p>inserir a imagem da Marielle Franco (já está na pasta)</p>
+    <!-- inserir a imagem da Marielle Franco (já está na pasta) -->
 </body>
 </html>
